WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
102982
Style sharing: Compare class lists via SpaceSplitString instead of string comparison.
https://bugs.webkit.org/show_bug.cgi?id=102982
Summary
Style sharing: Compare class lists via SpaceSplitString instead of string com...
Andreas Kling
Reported
2012-11-21 14:56:26 PST
Comparing the fastGetAttribute(classAttr) return values is silly when we can just see if the SpaceSplitStrings are the same.
Attachments
Patch
(2.18 KB, patch)
2012-11-21 14:58 PST
,
Andreas Kling
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Andreas Kling
Comment 1
2012-11-21 14:58:15 PST
Created
attachment 175529
[details]
Patch
WebKit Review Bot
Comment 2
2012-11-21 15:33:34 PST
Comment on
attachment 175529
[details]
Patch Clearing flags on attachment: 175529 Committed
r135445
: <
http://trac.webkit.org/changeset/135445
>
WebKit Review Bot
Comment 3
2012-11-21 15:33:37 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug