Style sharing: Compare class lists via SpaceSplitString instead of string comparison. <http://webkit.org/b/102982>

Reviewed by Antti Koivisto.

Add an operator!= to SpaceSplitString and use that check if two elements are eligible
for style sharing instead of comparing the fastGetAttribute(classAttr) return values.
This works because SpaceSplitString maps equal strings to the same data internally.

* css/StyleResolver.cpp:
(WebCore::haveIdenticalStyleAffectingAttributes):
* dom/SpaceSplitString.h:
(WebCore::SpaceSplitString::operator!=):
(SpaceSplitString):


Canonical link: https://commits.webkit.org/121106@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135445 268f45cc-cd09-0410-ab3c-d52691b4dbfc